# master-debater

./: .gitignore  README.md  package.json  turbo.json
apps/api/: main.py  pyproject.toml  requirements.txt
apps/api/debate_service/: alembic.ini  db.py  package.json
apps/api/debate_service/alembic/: env.py
apps/api/debate_service/alembic/versions/: 2025_05_11_2128-c66b6ea45d9f_initial_schema.py  2025_05_11_2132-b4612156f1d5_initial_seed_data.py  e696f79805af_create_initial_schema_tables.py
apps/api/debate_service/db/: masterdebater.db
apps/api/debate_service/models/: schema.py
apps/api/debate_service/routes/: ping.py
apps/debate-ui/: package.json  tsconfig.json
